--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,8 @@
 # Starter pipeline
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
-- task: NexusIqPipelineTask@1
+
+ task: NexusIqPipelineTask@1
   inputs:
     nexusIqService: 'test'
     applicationId: 'test'
