--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,3 +11,9 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+  
+- task: NexusIqPipelineTask@1
+  inputs:
+    nexusIqService: 'iq-server'
+    applicationId: 'iq-server'
+    stage: 'Build'
