--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,17 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
   
+- task: Maven@3
+inputs:
+	mavenPomFile: 'pom.xml'
+	publishJUnitResults: true
+	testResultsFiles: '**/surefire-reports/TEST-*.xml'
+	javaHomeOption: 'JDKVersion'
+	mavenVersionOption: 'Default'
+	mavenAuthenticateFeed: false
+	effectivePomSkip: false
+	sonarQubeRunAnalysis: false
+
 - task: NexusIqPipelineTask@1
   inputs:
     nexusIqService: 'iq-server'
