Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,5 +27,5 @@ steps:
 - task: NexusIqPipelineTask@1
   inputs:
     nexusIqService: 'iq-server'
-    applicationId: 'Struts2-RCE'
+    applicationId: 'struts2-rce__shatterhats'
     stage: 'Build'
